--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  intl: ^0.20.1
+  cupertino_icons: ^1.0.6
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  provider: ^6.1.2
+  http: ^1.2.2
+  font_awesome_flutter: ^10.8.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
